--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Util to view flow types in project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build viewer.js -d ./build"
   },
   "author": "Nikolay Ryabov",
   "license": "ISC",
   "dependencies": {
-    "flow-bin": "^0.66.0"
+    "flow-bin": "^0.66.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
