--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^8.1.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "node-sass": "^4.7.2",
+    "parcel-bundler": "^1.6.2",
+    "postcss-modules": "^1.1.0",
     "rimraf": "^2.6.2"
   }
 }
