--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "./cli.js",
   "scripts": {
     "start": "node index.js",
-    "build": "parcel build viewer/index.js -d ./build -o viewer.js && npm run start",
+    "build": "parcel build viewer/index.js -d ./build -o viewer.js",
     "watch": "parcel watch viewer/index.js -d ./build -o viewer.js"
   },
   "author": "Nikolay Ryabov",
