--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nikolay Ryabov",
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.15.1",
     "flow-bin": "^0.66.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
