--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "start": "node index.js",
     "build": "parcel build viewer/index.js -d ./build -o viewer.js",
-    "watch": "parcel watch viewer/index.js -d ./build -o viewer.js"
+    "watch": "parcel watch viewer/index.js -d ./build -o viewer.js",
+    "builtins": "node ./cli.js --builtins"
   },
   "author": "Nikolay Ryabov",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "commander": "^2.15.1",
     "flow-bin": "^0.66.0",
     "react": "^16.2.0",
