--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "bin": "./cli.js",
   "scripts": {
     "start": "node index.js",
-    "build": "parcel build viewer/index.js -d ./build -o viewer.js",
-    "watch": "parcel watch viewer/index.js -d ./build -o viewer.js",
-    "builtins": "node ./cli.js --builtins"
+    "build": "parcel build index.html --public-url \".\"",
+    "watch": "parcel watch index.html --public-url \".\"",
+    "builtins": "node ./cli.js --builtins",
+    "pages": "./builtins --builtins -v"
   },
   "author": "Nikolay Ryabov",
   "license": "ISC",
