--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commander": "^2.15.1",
     "flow-bin": "^0.66.0",
     "react": "^16.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
